<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/bg"
    tools:context=".MainWindow">
    <Button
        android:id="@+id/equip"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:text="@string/equip"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754"
        tools:ignore="MissingConstraints,SmallSp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="270dp"
        android:layout_height="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@drawable/simon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_sur_ce_bg_pour_monter_de_niveau"
        android:textSize="20dp"
        android:background="#0F0F00"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />


    <TextView
        android:id="@+id/click"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:background="@color/black"
        android:text="@string/points"
        android:textColor="#689d71"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/numberClick"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:background="@color/black"
        android:text="@string/_0"
        android:textColor="#689d71"
        android:textSize="25dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="182dp"
        android:layout_height="194dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/numberAttack"
            android:layout_width="108dp"
            android:layout_height="18dp"
            android:background="@color/black"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/attack_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/numberDefense"
            android:layout_width="107dp"
            android:layout_height="19dp"
            android:background="@color/black"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/defense_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.688" />

        <TextView
            android:id="@+id/numberSoin"
            android:layout_width="106dp"
            android:layout_height="18dp"
            android:background="@color/black"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/soins_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.823" />

        <TextView
            android:id="@+id/numberVitesse"
            android:layout_width="106dp"
            android:layout_height="18dp"
            android:background="@color/black"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/vitesse_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />

        <TextView
            android:id="@+id/niveau"
            android:layout_width="90dp"
            android:layout_height="33dp"
            android:background="@color/black"
            android:text="@string/niveau"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105" />

        <TextView
            android:id="@+id/numberNiveau"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:background="@color/black"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/attaque"
            android:textColor="@color/attack_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.547" />

        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/defense"
            android:textColor="@color/defense_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.685" />

        <TextView
            android:id="@+id/soin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/soin"
            android:textColor="@color/soins_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.824" />

        <TextView
            android:id="@+id/vitesse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/vitesse"
            android:textColor="@color/vitesse_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968" />

        <TextView
            android:id="@+id/pv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/pv"
            android:textColor="@color/pv_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.419" />

        <TextView
            android:id="@+id/numberPv"
            android:layout_width="110dp"
            android:layout_height="19dp"
            android:background="@color/black"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textColor="@color/pv_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/pv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.422" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="181dp"
        android:layout_height="139dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Equipement/Compagnon :"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="214dp"
            tools:layout_editor_absoluteY="533dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="500dp">

                <ImageView
                    android:id="@+id/equip_1_view"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vide" />

                <TextView
                    android:id="@+id/equip_1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Vide"
                    android:textColor="@color/white"
                    android:textSize="11dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="500dp">

                <ImageView
                    android:id="@+id/equip_2_view"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vide" />

                <TextView
                    android:id="@+id/equip_2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Vide"
                    android:textColor="@color/white"
                    android:textSize="11dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>